--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
